--- a/微信优购项目/pages/goods_detail/index.wxml
+++ b/微信优购项目/pages/goods_detail/index.wxml
@@ -1,2 +1,57 @@
-<!--pages/goods_detail/index.wxml-->
-<text>pages/goods_detail/index.wxml</text>
+<!--  详情页面  轮播图 -->
+<view class="detail_swiper">
+    <swiper autoplay="{{true}}" circular="{{true}}" indicator-dots="{{true}}">
+        <swiper-item wx:for="{{goodsObj.pics}}" wx:key="pics_id" bindtap="handlePreviewImage" data-url="{{item.pics_mid}}">
+            <image mode="widthFix" src="{{item.pics_mid}}"/>
+        </swiper-item>
+    </swiper>
+</view>
+
+<!-- 商品价格 -->
+<view class="goods_price">￥{{goodsObj.goods_price}}</view>
+
+<!-- 商品名称以及收藏按钮 -->
+<view class="goods_name_row">
+    <view class="goods_name">{{goodsObj.goods_name}}</view>
+    <view class="goods_collect" bindtap="handleCollect">
+        <text class="iconfont {{isCollect?'icon-yishoucang':'icon-shoucang'}}"></text>
+        <view class="collect_text">收藏</view>
+    </view>
+</view>
+
+<!-- 图文详情 -->
+<view class="goods_info">
+    <view class="goods_info_title">图文详情</view>
+    <view class="goods_info_content">
+        <!-- 图文详情是通过标签字符串来渲染的   所以我们用富文本来渲染它 -->
+        <rich-text nodes="{{goodsObj.goods_introduce}}"></rich-text>
+    </view>
+</view>
+
+<!-- 底部工具栏 -->
+<view class="btm_tool">
+    <view class="tool_item">
+        <view class="iconfont icon-kefu"></view>
+        <view>客服</view>
+        <button open-type="contact"></button>
+    </view>
+
+    <view class="tool_item">
+        <view class="iconfont icon-fenxiang"></view>
+        <view>分享</view>
+        <button open-type="share"></button>
+    </view>
+
+    <navigator open-type="switchTab" url="/pages/cart/index" class="tool_item">
+        <view class="iconfont icon-cart_icon"></view>
+        <view>购物车</view>
+    </navigator>
+
+    <view class="tool_item btn_cart" bindtap="handleCartAdd">
+        加入购物车
+    </view>
+
+    <view class="tool_item btn_buy">
+        立即购买
+    </view>
+</view>
