--- a/微信优购项目/pages/order/index.wxml
+++ b/微信优购项目/pages/order/index.wxml
@@ -1,2 +1,8 @@
-<!--pages/order/index.wxml-->
-<text>pages/order/index.wxml</text>
+<view class="goods_index">
+    <!-- 监听自定义事件  bindtabsItemChange -->
+    <tabs tabs="{{tabs}}" bindtabsItemChange="handleTabsItemChange">
+        <block wx:if="{{tabs[0].isActive}}"></block>
+        <block wx:elif="{{tabs[1].isActive}}">2</block>
+        <block wx:elif="{{tabs[2].isActive}}">3</block>
+    </tabs>
+</view>
