--- a/微信优购项目/pages/search/index.wxss
+++ b/微信优购项目/pages/search/index.wxss
@@ -1,1 +1,40 @@
-/* pages/search/index.wxss */
+page {
+  background-color: #dedede;
+  padding: 15rpx;
+}
+.search_row {
+  height: 80rpx;
+  display: flex;
+}
+.search_row input {
+  flex: 5;
+  height: 80%;
+  background-color: #fff;
+  margin-left: 15rpx;
+  padding-left: 30rpx;
+}
+.search_row text {
+  background-color: #dedede;
+  width: 10rpx;
+}
+.search_row button {
+  flex: 0.5;
+  width: 10rpx;
+  height: 80%;
+  font-size: 26rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search_content {
+  margin-top: 30rpx;
+}
+.search_content .search_item {
+  background-color: #fff;
+  font-size: 26rpx;
+  padding: 15rpx 10rpx;
+  border-bottom: 1rpx solid #ccc;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
